# rs-bazel

./: .gitignore  BUILD.bazel  Cargo.toml  WORKSPACE  WORKSPACE.bazel
substring-library/: BUILD  BUILD.bazel  Cargo.toml
substring-library/src/: lib.rs
